# chatterbox

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt  run_tests.py
conversations/: brya_basic.yaml  create_event.yaml  example.yaml  grand_rapids_events.yaml  rsvp_consistency_test.py  rsvp_to_event.yaml  staying_in_movie.yaml  weekend_event_details.yaml  whats_poppin.yaml
conversations/auth/: BRY-147_logout_retains_previous_user_page.yaml  BRY-148_logout_no_redirect.yaml  BRY-149_back_button_nonfunctional_after_login.yaml  BRY-150_profile_name_question_mark.yaml  BRY-339_logout_flow_inconsistent.yaml  BRY-361_login_modal_focus_trap.yaml  BRY-362_login_email_link_generic_error.yaml  BRY-469_co-domain-typo-duplicate-account.yaml  BRY-484_magic-link-reuse-duplicate-account.yaml  BRY-486_second-tab-session-overwrites-first.yaml  BRY-487_close-modal-redirects-to-events.yaml  BRY-531_continue-button-unresponsive.yaml  BRY-534_reload-creates-partial-account.yaml  BRY-541_send-again-no-feedback.yaml  BRY-560_tab-key-skips-login-buttons.yaml
conversations/chat_language/: BRY-114_location_suggestions_no_events.yaml  BRY-120_event_lookup_not_treated_as_query.yaml  BRY-151_aggressive_tone_repeated_question.yaml  BRY-153_this_week_past_events.yaml  BRY-154_inconsistent_event_data_across_users.yaml  BRY-155_stuck_typing_indicator.yaml  BRY-184_dismisses_specific_request.yaml  (+16 more)
harness/: __init__.py  auth.py  chat_driver.py  config.py  judge.py  judge_playbook.md  matchers.py  report.py  runner.py  schema.py  scraper.py  test_config.py
(+75 files in other folders)
